Added sample project